--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^18.0.4",
     "dotenv": "^16.0.1",
     "jest": "^28.1.3",
+    "jest-fetch-mock": "^3.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
